--- a/themes/mukurtu_v4/css/style.css
+++ b/themes/mukurtu_v4/css/style.css
@@ -5457,7 +5457,7 @@ header {
 :is(#extra-specificity-hack, .dictionary-word-tabs) ul.horizontal-tabs-list li.selected a,
 :is(#extra-specificity-hack, .dictionary-word-tabs) ul.horizontal-tabs-list li.selected a:hover,
 :is(#extra-specificity-hack, .dictionary-word-tabs) ul.horizontal-tabs-list li.selected a:active {
-  color: var(--light-text-color);
+  color: var(--brand-text-color);
   background-color: var(--brand-secondary-accent);
 }
 
